# data-sitter

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: pr-checks.yml  release.yml  test-coverage.yml
data-sitter/: Contract.py  FieldResolver.py  cli.py  main.py
data-sitter/field_types/: BaseField.py  FloatField.py  IntegerField.py  NumericField.py  __init__.py
data-sitter/rules/: Resolver.py  Rule.py  SolvedRule.py  __init__.py  alias_parameters_parser.py
data_sitter/: Contract.py  FieldResolver.py  Validation.py  __init__.py
data_sitter/field_types/: BaseField.py  FloatField.py  NumericField.py  StringField.py
data_sitter/rules/: LogicalRule.py  MatchedRule.py  ProcessedRule.py  RuleRegistry.py  __init__.py
data_sitter/rules/Parser/: RuleParser.py
data_sitter/utils/: logger_config.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_contract.py  test_field_resolver.py
tests/field_types/: __init__.py  test_base_field.py  test_field_integration.py  test_float_field.py  test_integer_field.py  test_numeric_field.py  test_string_field.py
tests/rules/: __init__.py  test_enums.py  test_logical_rule.py  test_matched_rule.py  test_processed_rule.py  test_rule.py  test_rule_registry.py
tests/rules/Parser/: __init__.py  test_alias_parameters_parser.py  test_parser_utils.py  test_rule_parser.py
