[build-system]
requires = ["setuptools>=76", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'data-sitter'
description = "A Python library that reads data contracts and generates Pydantic models for seamless data validation."
authors = [
    {name = 'Lázaro Pereira Candea', email = 'lazaro@candea.es'},
]
license = 'MIT'
