[build-system]
requires = ["setuptools>=76", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'data-sitter'
version = "0.1.5"
description = "A Python library that reads data contracts and generates Pydantic models for seamless data validation."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = 'Lázaro Pereira Candea', email = 'lazaro@candea.es'},
]
dependencies = [
    # Keep this in sync with setup.py
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "parse_type==0.6.4",
    "pydantic==2.10.5",
]

[project.scripts]
data-sitter = "data_sitter.cli:main"
